attempt.2 at fixing mobile gap between hero and about section changed min-h for mobile only

--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,10 @@
   color: #3bd455; /* GitHub text turns green on hover */
 }
 
+.social-media-link.resume:hover {
+  color: #fdeb6f; /* Resume text turns red on hover */
+}
+
 /* Base styles for the image */
 
 /* Mobile styles */
